# mjpg-streamer-1

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
mjpg-streamer-experimental/plugins/output_ws/: output_ws.h
plugins/input_http/: README.md  input_http.c  misc.c  misc.h  mjpg-proxy.c  mjpg-proxy.h
plugins/input_uvc/: CMakeLists.txt  input_uvc.c  v4l2uvc.c
plugins/output_file/: output_file.c
plugins/output_http/: httpd.c  httpd.h
plugins/output_ws/: CMakeLists.txt  Makefile  output_ws.cpp
